[gd_scene load_steps=23 format=2]

[ext_resource path="res://game/fx/explosion.gd" type="Script" id=1]
[ext_resource path="res://assets/images/fx/explosion_flash_3.png" type="Texture" id=2]
[ext_resource path="res://assets/images/fx/explosion_flash_2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/fx/explosion_flash_1.png" type="Texture" id=4]
[ext_resource path="res://assets/images/fx/cloud_small.png" type="Texture" id=5]
[ext_resource path="res://assets/images/fx/long_spark.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite3:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "impact1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.02 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "impact2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.001, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "impact3"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.001 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.001 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.0588235, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0.713726, 0.713726, 0.713726, 0.729412, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 14 )

[sub_resource type="Curve" id=8]
min_value = -918.07
max_value = 0.0
_data = [ Vector2( 0, 0 ), 0.0, -648.719, 0, 0, Vector2( 0.62037, -348.449 ), -154.522, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.111111, 1 ), 0.281374, 0.281374, 0, 0, Vector2( 1, 0 ), -1.09011, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.24
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -10.0
linear_accel_curve = SubResource( 9 )
scale_random = 0.3
scale_curve = SubResource( 11 )
color_ramp = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=13]
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.73
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -10.0
linear_accel_curve = SubResource( 9 )
scale_random = 0.3
scale_curve = SubResource( 11 )
color_ramp = SubResource( 7 )

[sub_resource type="Curve" id=15]
min_value = -10.0
max_value = 0.0
_data = [ Vector2( 0, 0 ), 0.0, 2.48961, 0, 0, Vector2( 1, -10 ), -10.6364, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=18]
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 60.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 45.0
initial_velocity_random = 0.73
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -10.0
linear_accel_curve = SubResource( 16 )
scale = 5.0
scale_random = 1.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=17]
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 45.0
initial_velocity_random = 0.73
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -10.0
linear_accel_curve = SubResource( 16 )
scale = 3.5
scale_random = 1.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/impact1 = SubResource( 2 )
anims/impact2 = SubResource( 3 )
anims/impact3 = SubResource( 4 )

[node name="sparks_mech" type="Particles2D" parent="."]
position = Vector2( -4.76221, 1.5874 )
emitting = false
amount = 7
one_shot = true
speed_scale = 4.0
explosiveness = 0.97
randomness = 1.0
process_material = SubResource( 12 )
texture = ExtResource( 6 )

[node name="sparks_miss" type="Particles2D" parent="."]
position = Vector2( -4.76221, 1.5874 )
emitting = false
amount = 5
one_shot = true
speed_scale = 4.0
explosiveness = 0.97
randomness = 1.0
process_material = SubResource( 13 )
texture = ExtResource( 6 )

[node name="hit_smoke" type="Particles2D" parent="."]
position = Vector2( -4.76221, 1.5874 )
emitting = false
amount = 12
lifetime = 5.0
one_shot = true
speed_scale = 4.0
explosiveness = 0.97
randomness = 1.0
process_material = SubResource( 18 )
texture = ExtResource( 5 )

[node name="miss_smoke" type="Particles2D" parent="."]
position = Vector2( -4.76221, 1.5874 )
emitting = false
amount = 5
lifetime = 5.0
one_shot = true
speed_scale = 4.0
explosiveness = 0.97
randomness = 1.0
process_material = SubResource( 17 )
texture = ExtResource( 5 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
